--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/node": "^8.3.3",
+    "@astrojs/tailwind": "^5.1.1",
+    "@navikt/ds-css": "^7.0.1",
     "astro": "^4.15.7",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
 }
