--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/node": "^8.3.3",
     "@astrojs/tailwind": "^5.1.1",
     "@navikt/ds-css": "^7.0.1",
+    "@navikt/ds-tailwind": "^7.0.1",
     "astro": "^4.15.7",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
