--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@navikt/ds-css": "^7.0.1",
     "@navikt/ds-tailwind": "^7.0.1",
     "astro": "^4.15.7",
+    "autoprefixer": "^10.4.20",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
