--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/node": "^8.3.3",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
     "@navikt/ds-css": "^7.0.1",
+    "@navikt/ds-react": "^7.0.1",
     "@navikt/ds-tailwind": "^7.0.1",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.7",
     "autoprefixer": "^10.4.20",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
