--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/node": "^8.3.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@navikt/aksel-icons": "^7.0.1",
     "@navikt/ds-css": "^7.0.1",
     "@navikt/ds-react": "^7.0.1",
     "@navikt/ds-tailwind": "^7.0.1",
