--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.8",
+    "astro-htmx": "^1.0.6",
     "autoprefixer": "^10.4.20",
+    "htmx.org": "^1.9.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.12",
