--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
+    "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^8.3.4",
     "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^5.1.1",
-    "@navikt/aksel-icons": "^7.0.1",
-    "@navikt/ds-css": "^7.0.1",
-    "@navikt/ds-react": "^7.0.1",
-    "@navikt/ds-tailwind": "^7.0.1",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "astro": "^4.15.8",
+    "@astrojs/tailwind": "^5.1.2",
+    "@navikt/aksel-icons": "^7.4.2",
+    "@navikt/ds-css": "^7.4.2",
+    "@navikt/ds-react": "^7.4.2",
+    "@navikt/ds-tailwind": "^7.4.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro": "4.16.8",
     "astro-htmx": "^1.0.6",
     "autoprefixer": "^10.4.20",
     "htmx.org": "^1.9.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.12",
-    "typescript": "^5.6.2"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
