--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^8.3.4",
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.2",
@@ -18,15 +17,18 @@
     "@navikt/ds-css": "^7.6.0",
     "@navikt/ds-react": "^7.6.0",
     "@navikt/ds-tailwind": "^7.6.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "astro": "4.16.16",
     "astro-htmx": "^1.0.6",
-    "autoprefixer": "^10.4.20",
     "htmx.org": "^1.9.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.15"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
     "typescript": "^5.7.2"
   }
 }
